--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Mannschaftskasse – Strafen",
-  "short_name": "StrafenPro",
+  "name": "Mannschaftskasse",
+  "short_name": "Kasse",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
